syntax = "proto3";

package me.jangjunha.ftgo.common;

message CommandReply {
    string correlationId = 1;
    bool succeed = 2;
    optional bytes body = 3;
}
